Changelog
=========

1.0 (unreleased)
----------------

- Fix attempt on new registration through the membership view to decode
  UTF-8 fullname twice, which caused errors on non-ASCII fullnames.
  [seanupton]

- Fix IGroups adapter failure on AutoGroups virtual groups like
  'AuthenticatedUsers' -- previously caused failure to iterate over
  group values. [seanupton]

- Additional test for basic group enumeration. [seanupton]

- Change SiteMembers.pwreset() to correctly use userid, not login name
  when interacting with PlonePAS user management plugin. [seanupton]


0.9 (2013-12-16)
----------------

- Updated to use of UUID-based group names. [seanupton]

- Various updates to make group configuration management
  pluggable.
  [seanupton]

- Moved source from uu.qiext to collective.teamwork
  [seanupton]


